c4prj1_deck/grade.txt
Grading at Sat Jun 20 17:13:53 UTC 2020
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_count’:
eval.c:267:7: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   int i = ifrom+i;
       ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
